test/bad/parse/ClassImport.hs
module ClassImport where

class Class a where
    import Bad
